--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,4 +7,4 @@ conda:
     - conda install -n base conda-build conda-verify anaconda-client
     - conda config --set anaconda_upload yes
     - conda list
-    - conda build -c quartiq -c m-labs -c conda-forge conda
+    - conda build -c quartiq -c m-labs -c conda-forge --no-test conda
